--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,7 +1,6 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@300&family=Roboto+Slab&display=swap');
 
 :root {
 	--foreground-rgb: 25, 14, 5;
@@ -9,18 +8,17 @@
 	--background-end-rgb: 25, 14, 5;
 }
 
-@media (prefers-color-scheme: dark) {
-	:root {
-		--foreground-rgb: 25, 14, 5;
-		--background-start-rgb: 25, 14, 5;
-		--background-end-rgb: 25, 14, 5;
-	}
+html {
+	scroll-behavior: smooth;
 }
 
 body {
-	font-family: "RALEWAY", sans-serif!important;
+	font-family: "Raleway", sans-serif!important;
+	font-weight: 300;
 	color: #F2F2F2;
 	background-color: #1A0E05;
+	font-weight: 300;
+	letter-spacing: 0.25px;
 }
 
 .concrete-box {
@@ -30,6 +28,7 @@ body {
 	background-color: #1A0E05;
 	border-color: #AEB7E5;
 	border-width: 0.4rem;
+	font-weight: 500;
 	color: #B1ADAA;
 	.beton {
 		color: #F2F2F2;
@@ -37,19 +36,100 @@ body {
 }
 
 .geliefert, .beton {
+	-webkit-transition: color 0.3s ease, font-size 0.3s ease;
 	transition: color 0.3s ease, font-size 0.3s ease;
 }
 
-.concrete-box:hover {
-	.beton {
-		font-size: 2.5rem;
-	}
-	.geliefert {
-		color: #AEB7E5;
-		font-size: 1.15rem;
+@media (max-width: 767px) {
+	.concrete-box:hover {
+		.beton  {
+			font-size: 2.5rem;
+		}
+		.geliefert {
+			color: #AEB7E5;
+			font-size: 1.25rem;
+		}
 	}
 }
 
+@media (min-width: 768px) {
+    .concrete-box:hover {
+        .beton {
+            font-size: 2.5rem;
+        }
+        .geliefert {
+            color: #AEB7E5;
+            font-size: 1.15rem;
+        }
+    }
+}
+
+
 .construction-background-img {
+	background-size: cover;
+	background-repeat: no-repeat;
+	background-position: top;
 	background-image: linear-gradient(to bottom, rgba(25, 14, 5, 0.5), rgba(25, 14, 5, 1)), url('/generated_construction_image.png');
+}
+
+.footer-bg-color {
+	background-color: #69503C;
+}
+
+.screenshot-bg {
+	background-color: #282828;
+}
+
+.kontakt-border {
+	border-radius: 1.25rem;
+	border: 5px dashed #69503C;
+	font-family: "Roboto Slab", sans-serif;
+}
+
+.kontakt-btn-border {
+	border-radius: 0.3rem;
+	border: 2px dashed #69503C;
+	letter-spacing: 3px;
+	/* font-weight: 500; */
+}
+
+.footer {
+	font-weight: 500;
+}
+
+::-webkit-scrollbar {
+	width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+	background: #7e6456; 
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+	background: #b89e8e; 
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+	background: #b89e8e;
+}
+
+ul.dashed-list {
+	list-style-type: none;
+}
+
+ul.dashed-list > li:before {
+	content: "- ";
+}
+
+.contact-form-btn {
+	min-height: 50px;
+	background-color: #69503C;
+	border-radius: 0.5rem;
+}
+
+.contact-form-sender {
+	border-radius: 0.5rem;
 }
