--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@700&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -92,6 +94,11 @@ input, textarea {
 
 .footer-bg-color {
 	background-color: #69503C;
+}
+
+.header-semi-brown-color {
+	font-family: 'Raleway', sans-serif;
+	background-color: #211610;
 }
 
 .screenshot-bg {
