--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,5 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@700&display=swap');
-
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -32,9 +30,17 @@ html {
 	font-display: swap;
 }
 
+@font-face {
+	font-family: "Raleway";
+	src: url("/fonts/Raleway-Bold.ttf");
+	font-weight: 700;
+	font-style: normal;
+	font-display: swap;
+}
+
 body {
 	font-family: Raleway, sans-serif!important;
-	font-weight: 300;
+	font-weight: 400;
 	color: #F2F2F2;
 	background-color: #1A0E05;
 	letter-spacing: 0.25px;
@@ -89,7 +95,7 @@ input, textarea {
 	background-size: cover;
 	background-repeat: no-repeat;
 	background-position: top;
-	background-image: linear-gradient(to bottom, rgba(25, 14, 5, 0.5), rgba(25, 14, 5, 1)), url("/generated_construction_image.png");
+	background-image: linear-gradient(to bottom, rgba(25, 14, 5, 0.5), rgba(25, 14, 5, 1)), url("/media/generated_construction_image.png");
 }
 
 .footer-bg-color {
@@ -125,17 +131,14 @@ input, textarea {
 	width: 10px;
 }
 
-/* Track */
 ::-webkit-scrollbar-track {
 	background: #7e6456; 
 }
 
-/* Handle */
 ::-webkit-scrollbar-thumb {
 	background: #b89e8e; 
 }
 
-/* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
 	background: #b89e8e;
 }
@@ -169,4 +172,9 @@ ul.dashed-list > li:before {
 		background-color: #56504C;
 		opacity: 0.5;
 	}
+}
+
+.scholarship-partner {
+	border-radius: 0.3rem;
+	background-color: #F2F2F2;
 }
